# onnxTool

./: .gitignore  CMakeLists.txt  README.md  install.bash  install.bat  onnx.cpp  onnx.h
code/: adaface.h  face_detector.h  yolov10.h  yolov8.h
deploy/: onnxTool.h
examples/face-adaface/: main.cpp
examples/face-detector/: CMakeLists.txt  main.cpp
examples/face-recognition/: CMakeLists.txt  main.cpp
examples/yolov10/: CMakeLists.txt  main.cpp
examples/yolov8/: CMakeLists.txt  main.cpp
